avoid sabotaged colors.js 1.4.1 version (#3185)

--- a/tools/sdk-generation-pipeline/packages/sdk-generation-lib/package.json
+++ b/tools/sdk-generation-pipeline/packages/sdk-generation-lib/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.8.0",
     "ajv": "^6.12.6",
-    "colors": "^1.4.0",
+    "colors": "1.4.0",
     "convict": "^6.2.1",
     "jsonc-parser": "^3.0.0",
     "winston": "^3.3.3"
