Updating chaos mesh version (#3143)
* Updating chaos mesh version

* merge with main

* Revert "merge with main"

This reverts commit d8dcef5683452b73e9760f02f0767595bf17e676.

* update v0.1.16 for stress-test-addons dependencies

* Change context for stress watcher

* chart.lock updates

* stress watcher eol reverse

--- a/tools/stress-cluster/cluster/kubernetes/stress-infrastructure/templates/stresswatcher.yaml
+++ b/tools/stress-cluster/cluster/kubernetes/stress-infrastructure/templates/stresswatcher.yaml
@@ -1,4 +1,4 @@
-{{ $ctx := deepCopy . | merge (dict "Scenario" "watcher" ) -}}
+{{ $ctx := fromYaml (include "stress-test-addons.util.mergeStressContext" (list . "watcher" )) }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
