--- a/tools/sdk-testgen/packages/autorest.testmodeler/package.json
+++ b/tools/sdk-testgen/packages/autorest.testmodeler/package.json
@@ -32,7 +32,7 @@
         "@types/node": "10.17.0",
         "@typescript-eslint/eslint-plugin": "^5.17.0",
         "@typescript-eslint/parser": "^5.17.0",
-        "cpy-cli": "^3.1.1",
+        "cpy-cli": "~4.1.0",
         "eslint": "^7.25.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
@@ -54,7 +54,7 @@
         "jsonpath": "^1.1.1",
         "lodash": "~4.17.21",
         "node-yaml": "^3.2.0",
-        "oav": "2.11.3",
+        "oav": "2.12.1",
         "reflect-metadata": "~0.1.13"
     },
     "files": [
