--- a/tools/mock-service-host/ci.yml
+++ b/tools/mock-service-host/ci.yml
@@ -57,8 +57,8 @@ stages:
           displayName: 'Install Node.js'
 
         - script: |
-            npm install
-          displayName: 'npm install'
+            npm ci
+          displayName: 'npm ci'
           workingDirectory: $(System.DefaultWorkingDirectory)/tools/mock-service-host
 
         - script: |
