[sdk-testgen] shrinkwrap (#3200)
* use-shrinkwrap

* testmodeler@2.2.5

* lint

* eslint8.14

* update

* revert-to-pnpm

* use npm-shinkwrap

name

files

resume ci.yml format

format

* contribute

--- a/tools/sdk-testgen/ci.yml
+++ b/tools/sdk-testgen/ci.yml
@@ -29,14 +29,14 @@ pool:
   vmImage: "ubuntu-latest"
 
 variables:
-  NugetSecurityAnalysisWarningLevel: 'none'
+  NugetSecurityAnalysisWarningLevel: "none"
 
 stages:
   - stage: build
     displayName: "Build, Lint and Test"
     jobs:
-      - job: build
-        displayName: "Build"
+      - job: MonoRepo
+        displayName: "MonoRepo"
         steps:
           - template: ../../eng/common/pipelines/templates/steps/verify-path-length.yml
             parameters:
@@ -80,6 +80,17 @@ stages:
           - publish: $(Build.SourcesDirectory)/tools/sdk-testgen/common/temp/artifacts/packages
             artifact: packages
             displayName: Publish packages(.tgz) as pipeline artifacts
+      - job: Testmodeler
+        displayName: "TestModeler"
+        steps:
+          - script: |
+              npm ci
+            displayName: "npm ci"
+            workingDirectory: $(Build.SourcesDirectory)/tools/sdk-testgen/packages/autorest.testmodeler
+          - script: |
+              npm run test
+            displayName: "npm run test"
+            workingDirectory: $(Build.SourcesDirectory)/tools/sdk-testgen/packages/autorest.testmodeler
 
   - ${{if eq(variables['Build.Reason'], 'Manual')}}:
     - stage: release
