Update stress watcher docker image to dotnet 6.0 (#3186)
* Update stress watcher docker image to dotnet 6.0

* ci pipeline dotnetversion format

* cleanup

* stress watcher test targetframwork update

--- a/tools/stress-cluster/services/Stress.Watcher/ci.yml
+++ b/tools/stress-cluster/services/Stress.Watcher/ci.yml
@@ -25,5 +25,5 @@ extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
   parameters:
     ToolDirectory: tools/stress-cluster/services/Stress.Watcher
-    DotNetCoreVersion: "5.0.100"
+    DotNetCoreVersion: "6.0.x"
     NoWarn: true
