--- a/eng/pipelines/branch-cleanup.yml
+++ b/eng/pipelines/branch-cleanup.yml
@@ -2,16 +2,22 @@ parameters:
 - name: Repos
   type: object
   default:
-    - azure-sdk-for-android
-    - azure-sdk-for-c
-    - azure-sdk-for-cpp
-    - azure-sdk-for-go
-    - azure-sdk-for-ios
-    - azure-sdk-for-java
-    - azure-sdk-for-js
-    - azure-sdk-for-net
-    - azure-sdk-for-python
-
+    - Azure/azure-sdk-for-android
+    - Azure/azure-sdk-for-c
+    - Azure/azure-sdk-for-cpp
+    - Azure/azure-sdk-for-go
+    - Azure/azure-sdk-for-ios
+    - Azure/azure-sdk-for-java
+    - Azure/azure-sdk-for-js
+    - Azure/azure-sdk-for-net
+    - Azure/azure-sdk-for-python
+- name: DailyBranchRepos
+  type: object
+  default:
+    - Azure/azure-docs-sdk-dotnet
+    - Azure/azure-docs-sdk-java
+    - MicrosoftDocs/azure-docs-sdk-node
+    - MicrosoftDocs/azure-docs-sdk-python
 jobs:
   - job: CleanUp
     pool:
@@ -22,13 +28,27 @@ jobs:
       - ${{ each repo in parameters.Repos }}:
         - task: PowerShell@2
           displayName: Clean Up Sync Common Branches
-          condition: succeeded()
+          condition: succeededOrFailed()
+          continueOnError: true
           inputs:
             pwsh: true
             workingDirectory: $(System.DefaultWorkingDirectory)
             filePath: $(System.DefaultWorkingDirectory)/eng/common/scripts/Delete-RemoteBranches.ps1
             arguments: >
-              -RepoOwner "Azure"
-              -RepoName ${{ repo }}
-              -BranchPrefix "sync-eng/common-"
+              -RepoId ${{ repo }}
+              -BranchPrefix "sync-eng/common-" 
               -AuthToken $(azuresdk-github-pat)
+      - ${{ each repo in parameters.DailyBranchRepos }}:
+        - task: PowerShell@2
+          displayName: Clean Up Docs Daily Branches
+          condition: succeededOrFailed()
+          inputs:
+            pwsh: true
+            workingDirectory: $(System.DefaultWorkingDirectory)
+            filePath: $(System.DefaultWorkingDirectory)/eng/common/scripts/Delete-RemoteBranches.ps1
+            arguments: >
+              -RepoId ${{ repo }}
+              -BranchPrefix "daily"
+              -LastCommitOlderThan ((Get-Date).AddDays(-7))
+              -AuthToken $(azuresdk-github-pat)
+            
