Migrating network stress dockerfile from alpine to mcr's cbl-mariners (#3240)
* Migrating network stress dockerfile from alpine to mcr's cbl-mariners

* eol

--- a/tools/stress-cluster/chaos/examples/network-stress-example/Dockerfile
+++ b/tools/stress-cluster/chaos/examples/network-stress-example/Dockerfile
@@ -1,6 +1,5 @@
-FROM alpine:3.14
-RUN apk add --no-cache wget
-RUN apk add --no-cache bash
+FROM mcr.microsoft.com/cbl-mariner/base/core:1.0
+# Included packages: https://github.com/microsoft/CBL-Mariner/blob/1.0/SPECS/core-packages/core-packages.spec
 
 ADD ./poll.sh /poll.sh
 RUN chmod +x /poll.sh
