[Asset Sync] Script Prototype and Investigation Docs(#3170)
* Initial Assets-Sync Proposal Document.
* Prototype of Assets-Sync Script 'tools/asset-sync/assets.ps1` and accompanying Pester integration test suite. To properly enable integration testing in CI, additional effort is still required.
  * Test Helper can create local language and assets repo scenarios. This means that we can fully integration test individual conflict scenarios as they are discovered by users.
* Powershell Test YML enabling CI checks for a powershell project. 'archetype-sdk-tool-pwsh'. This is usable outside of the this specific commit's new code.

Co-authored-by: James Suplizio <jasupliz@microsoft.com>
Co-authored-by: Ben Broderick Phillips <bebroder@microsoft.com>
Co-authored-by: Wes Haggard <weshaggard@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+testResult*.xml
 
 # Translations
 *.mo
@@ -490,6 +491,8 @@ src/dotnet/APIView/APIViewWeb/wwwroot/js/*.js*
 # npm
 *-lock.json
 
+.assets
+tools/asset-sync/.testruns
 
 # oav converter
 tools/oav-traffic-converter/input-example/
